tests/paczka1/small_fuzzy/33821207.err
Error in line 1: S915 A912 576
Error in line 3: kbe0NYA A397 70,1
Error in line 5: YiG363 A397 39,4
